force-app/main/default/objects/RecurringDonation__c/RecurringDonation__c.object-meta.xml
<CustomObject>
    <label>Recurring Donation</label>
    <nameField>
        <displayFormat>RD-{00000000}</displayFormat>
        <label>Recurring Donations Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Recurring Donations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>