force-app/main/default/objects/RecurringDonation__c/fields/CustomerId__c.field-meta.xml
<CustomField>
    <fullName>CustomerId__c</fullName>
    <formula>Contact__r.CustomerId__c</formula>
    <label>CustomerId</label>
    <type>Text</type>
</CustomField>