force-app/main/default/objects/RecurringDonation__c/fields/LastPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>LastPaymentDate__c</fullName>
    <description>Last success payment date</description>
    <inlineHelpText>Last success payment date</inlineHelpText>
    <label>Last Payment Date</label>
    <type>Date</type>
</CustomField>