force-app/main/default/objects/RecurringDonation__c/fields/NextPaymentDate__c.field-meta.xml
<CustomField>
    <fullName>NextPaymentDate__c</fullName>
    <label>Next Payment Date</label>
    <type>Date</type>
</CustomField>