force-app/main/default/objects/RecurringDonation__c/fields/OfferExpDate__c.field-meta.xml
<CustomField>
    <fullName>OfferExpDate__c</fullName>
    <label>Offer Exp Date</label>
    <type>Date</type>
</CustomField>