force-app/main/default/objects/RecurringDonation__c/fields/OrderNumber__c.field-meta.xml
<CustomField>
    <fullName>OrderNumber__c</fullName>
    <formula>Contact__r.OrderNumber__c</formula>
    <label>Order Number</label>
    <type>Text</type>
</CustomField>