force-app/main/default/objects/RecurringDonation__c/fields/PaymentDay__c.field-meta.xml
<CustomField>
    <fullName>PaymentDay__c</fullName>
    <formula>Contact__r.PaymentDay__c</formula>
    <label>Payment Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>