force-app/main/default/objects/RecurringDonation__c/fields/RecurringToken__c.field-meta.xml
<CustomField>
    <fullName>RecurringToken__c</fullName>
    <label>Recurring Token</label>
    <length>255</length>
    <type>Text</type>
</CustomField>