force-app/main/default/objects/RecurringDonation__c/fields/Staging__c.field-meta.xml
<CustomField>
    <fullName>Staging__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Staging</label>
    <referenceTo>DonationStaging__c</referenceTo>
    <relationshipLabel>Recurring Donations</relationshipLabel>
    <relationshipName>RecurringDonations</relationshipName>
    <type>Lookup</type>
</CustomField>