force-app/main/default/objects/RecurringDonation__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Contact__c</columns>
    <columns>Email__c</columns>
    <columns>PaymentDay__c</columns>
    <columns>CustomerId__c</columns>
    <columns>OrderNumber__c</columns>
    <columns>Amount__c</columns>
    <columns>RecurringToken__c</columns>
    <columns>Status__c</columns>
    <columns>NextPaymentDate__c</columns>
    <columns>LastPaymentDate__c</columns>
    <columns>OfferExpDate__c</columns>
    <filterScope>Everything</filterScope>
    <label>All today&apos;s donations</label>
</ListView>